# melange-str

./: CHANGES.md  Makefile  README.md  dune-project  melange-str.opam  melange-str.opam.template
.github/workflows/: ci.yml
lib/: dune  str.ml  str.mli
test/capture/: dune  input.ml  run.t
test/edge_cases/: dune  input.ml  run.t
test/errors/: dune  input.ml  run.t
test/match/: dune  input.ml  run.t
test/partial_match/: dune  input.ml  run.t
test/replace/: dune  input.ml  run.t
test/search/: dune  input.ml  run.t
test/split/: dune  input.ml  run.t
test/string_utils/: dune  input.ml  run.t
